--- a/lightBoardEsp/platformio.ini
+++ b/lightBoardEsp/platformio.ini
@@ -13,4 +13,8 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 monitor_speed = 115200
-lib_deps = plerup/EspSoftwareSerial@^6.15.2
+; upload_protocol = espota
+; upload_port = 192.168.1.21
+lib_deps = 
+	plerup/EspSoftwareSerial@^6.15.2
+	knolleary/PubSubClient@^2.8
