--- a/lightBoardEsp/platformio.ini
+++ b/lightBoardEsp/platformio.ini
@@ -13,8 +13,9 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 monitor_speed = 115200
+; upload_resetmethod = nodemcu
 upload_protocol = espota
-upload_port = 192.168.1.21
+upload_port = 192.168.1.22
 lib_deps = 
 	plerup/EspSoftwareSerial@^6.15.2
 	knolleary/PubSubClient@^2.8
